--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-contacts": "^8.0.1",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.4",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-simple-toast": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
